--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
-            "php artisan ide-helper:generate",
+            "php artisan ide-helper:generate -M",
             "php artisan optimize"
 		],
 		"post-create-project-cmd": [
